@@ -39,7 +39,6 @@ import org.powermock.reflect.Whitebox;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Supplier;
@@ -136,7 +135,7 @@ public class TaxNotificationReportWidgetTest {
         grid.select(SCENARIO_2);
         assertEquals(Sets.newHashSet(SCENARIO_ID_1, SCENARIO_ID_2), widget.getSelectedScenarioIds());
         grid.deselectAll();
-        assertEquals(Collections.emptySet(), widget.getSelectedScenarioIds());
+        assertEquals(Set.of(), widget.getSelectedScenarioIds());
     }
 
     @Test
